syntax = "proto3";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "SP.Api.Models";

package Api;

message GetAccessAttemptsRequest {
	AccessAttempt AccessAttempt = 1;
	bool detectIPRange = 2;
	google.protobuf.Timestamp fromTime = 3;
}

message GetAccessAttemptsResponse {
	int32 result = 1;
}

message AddAccessAttemptRequest {
	AccessAttempt accessAttempts = 1;
}

message AddAccessAttemptResponse {
	bool result = 1;
}

message AccessAttempt {
	int64 id = 1;
	string ipAddress = 2;
	int32 ipAddress1 = 3;
	int32 ipAddress2 = 4;
	int32 ipAddress3 = 5;
	int32 ipAddress4 = 6;
	string ipAddressRange = 7;
	google.protobuf.Timestamp eventDate = 8;
	string details = 9;
	int32 attackType = 10;
	string custom1 = 11;
	int32 custom2 = 12;
	int64 custom3 = 13;
}