syntax = "proto3";
import "Protos/accessAttempts.proto";
import "Protos/blocks.proto";
import "Protos/statistics.proto";

option csharp_namespace = "SP.Api.Models";

package Api;

service ApiServices {
	rpc GetLoginAttempts ( GetAccessAttemptsRequest ) returns ( GetAccessAttemptsResponse );
	rpc AddLoginAttempt ( AddAccessAttemptRequest ) returns ( AddAccessAttemptResponse );

	rpc GetUnblocks ( GetUnblocksRequest ) returns ( GetUnblocksResponse );
	rpc AddBlock ( AddBlockRequest ) returns ( AddBlockResponse );
	rpc UpdateBlock ( UpdateBlockRequest ) returns ( UpdateBlockResponse );

	rpc StatisticsUpdateBlocks (StatisticsUpdateBlocksRequest ) returns ( StatisticsUpdateBlocksResponse );
}